Fix wrong spacing on homepage in Chrome
Fix #95

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,8 +6,8 @@ header {
   align-items: align-items;
   justify-content: center;
 
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100vh;
+  max-height: -webkit-fill-available;
 
   @include for-tablet-landscape-down {
     justify-content: flex-end;
